updates serverSideProps on menu

--- a/public/locales/ca/common.json
+++ b/public/locales/ca/common.json
@@ -1,5 +1,11 @@
 {
   "home": "Inici",
   "book": "Reserva",
-  "menu": "Menú"
+  "menu": "Menú",
+  "pageTitle": "Tremendo Bar Sant Cugat",
+  "logoAlt": "Tremendo Logo",
+  "appetizers": "Aperitius",
+  "dishes": "Plats",
+  "hamburgers": "Hamburgueses",
+  "desserts": "Postres"
 }
