updates serverSideProps on all pages and updates menu burger and overlay

--- a/public/locales/ca/common.json
+++ b/public/locales/ca/common.json
@@ -7,5 +7,9 @@
   "appetizers": "Aperitius",
   "dishes": "Plats",
   "hamburgers": "Hamburgueses",
-  "desserts": "Postres"
+  "desserts": "Postres",
+  "name": "Nom",
+  "email": "Correu electrònic",
+  "message": "Missatge",
+  "bookTable": "Reserva una Taula"
 }
