updates form to material UI

--- a/public/locales/ca/common.json
+++ b/public/locales/ca/common.json
@@ -15,6 +15,11 @@
   "selectDate": "Trieu la Data",
   "selectTime": "Trieu l'Hora",
   "selectPax": "Nombre de Comensals",
+  "selectDetails": "Detalls del Client",
+  "selectDateTitle": "Data",
+  "selectTimeTitle": "Hora",
+  "selectPaxTitle": "Comensals",
+  "selectDetailsTitle": "Detalls",
   "comments": "Comentaris",
   "pleaseFillDate": "Si us plau, ompliu la data.",
   "pleaseFillTime": "Si us plau, ompliu l'hora.",
