--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -15,6 +15,11 @@
   "selectDate": "Select Date",
   "selectTime": "Select Time",
   "selectPax": "Number of Guests",
+  "selectDetails": "Guerst Details",
+  "selectDateTitle": "Date",
+  "selectTimeTitle": "Time",
+  "selectPaxTitle": "Guests",
+  "selectDetailsTitle": "Details",
   "comments": "Comments",
   "pleaseFillDate": "Please fill in the date.",
   "pleaseFillTime": "Please fill in the time.",
