--- a/public/locales/es/common.json
+++ b/public/locales/es/common.json
@@ -15,6 +15,11 @@
   "selectDate": "Seleccione Fecha",
   "selectTime": "Seleccione Hora",
   "selectPax": "Número de Personas",
+  "selectDetails": "Detalles del Cliente",
+  "selectDateTitle": "Fecha",
+  "selectTimeTitle": "Hora",
+  "selectPaxTitle": "Comensales",
+  "selectDetailsTitle": "Detalles",
   "comments": "Comentarios",
   "pleaseFillDate": "Por favor, rellene la fecha.",
   "pleaseFillTime": "Por favor, rellene la hora.",
