updates NavButtons and translations

--- a/public/locales/ca/common.json
+++ b/public/locales/ca/common.json
@@ -12,6 +12,7 @@
   "email": "Correu electrònic",
   "message": "Missatge",
   "bookTable": "Reserva una Taula",
+  "checkOurMenu": "Consulta el nostre menú",
   "selectDate": "Trieu la Data",
   "selectTime": "Trieu l'Hora",
   "selectPax": "Nombre de Comensals",
