--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -12,6 +12,7 @@
   "email": "Email",
   "message": "Message",
   "bookTable": "Book A Table",
+  "checkOurMenu": "Check our menu",
   "selectDate": "Select Date",
   "selectTime": "Select Time",
   "selectPax": "Number of Guests",
