--- a/public/locales/es/common.json
+++ b/public/locales/es/common.json
@@ -12,6 +12,7 @@
   "email": "Correo electrónico",
   "message": "Mensaje",
   "bookTable": "Reservar una Mesa",
+  "checkOurMenu": "Echa un vistazo a nuestro menú",
   "selectDate": "Seleccione Fecha",
   "selectTime": "Seleccione Hora",
   "selectPax": "Número de Personas",
