updates carta and languages

--- a/public/locales/es/common.json
+++ b/public/locales/es/common.json
@@ -3,30 +3,37 @@
   "book": "Reservar",
   "menu": "Menú",
   "pageTitle": "Tremendo Bar Sant Cugat",
-  "logoAlt": "Logo de Tremendo",
-  "appetizers": "Entrantes",
+  "logoAlt": "Logotipo de Tremendo",
+  "appetizers": "Aperitivos",
   "dishes": "Platos",
   "hamburgers": "Hamburguesas",
   "desserts": "Postres",
+  "tapas": "Tapas y platillos",
+  "beers": "Cervezas",
+  "wines": "Vinos",
+  "white_wines": "Vinos Blancos",
+  "red_wines": "Vinos Tintos",
+  "rose_wines": "Vinos Rosados",
+  "sparkling_wines": "Vinos Espumosos",
   "name": "Nombre",
   "email": "Correo electrónico",
   "message": "Mensaje",
-  "bookTable": "Reservar una Mesa",
-  "checkOurMenu": "Nuestro menú",
-  "selectDate": "Seleccione Fecha",
-  "selectTime": "Seleccione Hora",
-  "selectPax": "Número de Personas",
-  "selectDetails": "Detalles del Cliente",
+  "bookTable": "Reservar una mesa",
+  "checkOurMenu": "Consulta nuestro menú",
+  "selectDate": "Seleccionar fecha",
+  "selectTime": "Seleccionar hora",
+  "selectPax": "Número de comensales",
+  "selectDetails": "Detalles de los invitados",
   "selectDateTitle": "Fecha",
   "selectTimeTitle": "Hora",
   "selectPaxTitle": "Comensales",
   "selectDetailsTitle": "Detalles",
   "comments": "Comentarios",
-  "pleaseFillDate": "Por favor, rellene la fecha.",
-  "pleaseFillTime": "Por favor, rellene la hora.",
-  "pleaseFillPax": "Por favor, rellene el número de personas.",
-  "pleaseFillName": "Por favor, introduzca un nombre.",
-  "pleaseFillEmail": "Por favor, introduzca un correo electrónico.",
+  "pleaseFillDate": "Por favor, introduce la fecha.",
+  "pleaseFillTime": "Por favor, introduce la hora.",
+  "pleaseFillPax": "Por favor, introduce el número de comensales.",
+  "pleaseFillName": "Por favor, introduce un nombre.",
+  "pleaseFillEmail": "Por favor, introduce un correo electrónico.",
   "back": "Atrás",
   "next": "Siguiente",
   "submit": "Enviar",
@@ -35,5 +42,111 @@
   "footerCopyright": "Tremendo Sant Cugat",
   "allRightsReserved": "Grupo Clorofila Barcelona",
   "designedBy": "Diseñado por",
-  "preferPhoneBooking": "¿Prefieres reservar por teléfono?"
+  "preferPhoneBooking": "¿Prefieres reservar por teléfono?",
+
+  "olives": "Aceitunas",
+  "house_chips": "Patatas de la casa",
+  "house_chips_desc": "Patatas, aceitunas, piparras y salsa de aperitivo",
+  "combo_with_mussels": "Combo con mejillones",
+  "combo_with_mussels_desc": "Patatas, aceitunas, piparras, mejillones y salsa de aperitivo",
+  "combo_with_anchovies": "Combo con boquerones",
+  "combo_with_anchovies_desc": "Patatas, aceitunas, piparras, boquerones y salsa de aperitivo",
+  "anchovy_cantabrico": "Anchoa del Cantábrico '00' (1 filete)",
+  "anchovies_in_vinegar": "Boquerones en vinagre (6u)",
+  "gilda": "Gilda",
+  "mussels_in_escabeche": "Mejillones en escabeche",
+
+  "bravas": "Bravas",
+  "russian_salad": "Ensaladilla rusa",
+  "eggplant_chips_with_truffled_honey": "Chips de berenjena con miel trufada",
+  "iberian_ham_croquettes": "Croquetas de jamón ibérico (1u)",
+  "clams_a_la_marinera": "Almejas a la marinera",
+  "cod_fritters_with_citrus_mayo": "Buñuelos de bacalao con mayonesa de cítricos (1u)",
+  "iberian_ham_100_bellota": "Jamón ibérico 100% bellota, cortado a mano 80gr",
+  "bread_with_tomato": "Pan con tomate",
+  "grilled_mussels": "Mejillones a la brasa",
+  "fried_chicken_marinated": "Pollo frito (macerado 12h)",
+  "fresh_squid_from_market": "Chipirones frescos de lonja (según disponibilidad)",
+  "scallops_with_caramelized_onion": "Zamburiñas con cebolla caramelizada a la plancha y gratén (4u)",
+  "barcelona_style_dry_seafood_rice": "Arroz seco de marisco al estilo barcelonés (precio por persona, mínimo 2 personas)",
+  "broken_eggs_with_iberian_ham": "Huevos rotos con jamón ibérico",
+  "broken_eggs_with_foie": "Huevos rotos con foie",
+  "veal_cheek_low_temp": "Carrillera de ternera a baja temperatura con parmentier y su reducción",
+  "tomato_purple_onion_tuna_salad": "Tomate Barbastro, cebolla morada y ventresca de atún",
+  "andalusian_calamari": "Calamares a la andaluza",
+  "grilled_octopus_with_kimchi": "Pulpo a la brasa con pincelada de kimchi (ligeramente picante), causa limeña y pico de gallo",
+  "marinated_salmon": "Salmón marinado, tomate Barbastro, aguacate, mozzarella y emulsión de soja y miel",
+  "yellowfin_tuna_tataki": "Tataki de atún rojo yellowfin a la brasa, salsa teriyaki, mayonesa de wasabi, sésamo y brotes",
+  "yellowfin_tuna_tartar": "Tartar de atún rojo yellowfin con crema de aguacate",
+  "minute_steak_tartar": "Steak tartar de solomillo a la minute",
+  "grilled_beef_tenderloin_with_foie": "Solomillo de ternera a la brasa con foie y cebolla caramelizada",
+  "grilled_beef_rib_steak": "Chuletón de ternera de la Cerdanya a la brasa (500gr para compartir)",
+
+  "cheesecake_with_fruit_jam": "Tarta de queso con confitura de frutas",
+  "chocolate_cake_with_cocoa": "Tarta de chocolate con cobertura de cacao, sal en escamas y caramelo casero",
+  "ultra_creamy_flan": "Flan ultracremoso con nata casera",
+
+  "estrella_galicia_glass": "Copa Estrella Galicia",
+  "estrella_galicia_small": "Caña Estrella Galicia",
+  "estrella_galicia_mug": "Jarra Estrella Galicia",
+  "estrella_galicia": "Estrella Galicia",
+  "estrella_damm": "Estrella Damm",
+  "voll_damm": "Voll-Damm",
+  "estrella_galicia_non_alcoholic": "Estrella Galicia sin alcohol",
+  "estrella_galicia_gluten_free": "Estrella Galicia sin gluten",
+  "espiga": "Espiga",
+
+  "fenomenal_verdejo_2022": "Fenomenal 2022 (Verdejo)",
+  "fenomenal_verdejo_2022_desc": "Verdejo",
+  "do_rueda": "D.O Rueda",
+  "ca_nestruc_2021": "Ca Nestruc 2021",
+  "ca_nestruc_2021_desc": "Xarel.lo, Macabeo y Muscat",
+  "do_catalunya": "D.O Catalunya",
+  "terra_prima_2022": "Terra Prima 2022",
+  "terra_prima_2022_desc": "Xarel.lo, Macabeo y Moscatel de Fontignac",
+  "do_penedes": "D.O Penedés",
+  "el_perro_verde_2022": "El Perro Verde 2022",
+  "el_perro_verde_2022_desc": "Verdejo",
+  "perafita_2023": "Perafita 2023",
+  "perafita_2023_desc": "Picapoll",
+  "do_emporda": "D.O Empordà",
+  "gessami_2022": "Gessamí 2022",
+  "gessami_2022_desc": "Muscat de Frontignan, Sauvignon Blanc, Gewürztraminer",
+  "terras_gauda_2022": "Terras Gauda 2022",
+  "terras_gauda_2022_desc": "Albariño, Caiño Blanco, Loureiro",
+  "do_rias_baixas": "D.O Rias Baixas",
+  "can_sumoi_xarel_lo_2022": "Can Sumoi Xarel.lo 2022",
+  "can_sumoi_xarel_lo_2022_desc": "Xarel.lo",
+  "belondrade_quinta_apolonia_2022": "Belondrade Quinta Apolonia 2022",
+  "belondrade_quinta_apolonia_2022_desc": "Verdejo",
+
+  "heraclio_alfaro_crianza_2019": "Heraclio Alfaro crianza 2019",
+  "heraclio_alfaro_crianza_2019_desc": "Tempranillo, Garnacha, Graciano",
+  "do_rioja": "D.O Rioja",
+  "mas_picosa_2021_eco": "Mas Picosa 2021 ECO",
+  "mas_picosa_2021_eco_desc": "Garnacha, Syrah, Merlot, Tempranillo",
+  "do_montsant": "D.O Montsant",
+  "petit_caus_2022_eco": "Petit Caus 2022 ECO",
+  "petit_caus_2022_eco_desc": "Merlot, Syrah, Cabernet Franc, Tempranillo",
+  "pago_de_los_capellanes_2022": "Pago de los Capellanes 2022",
+  "pago_de_los_capellanes_2022_desc": "Fino",
+  "do_ribera_del_duero": "D.O Ribera del Duero",
+  "vizcarra_crianza_2020": "Vizcarra crianza 2020",
+  "vizcarra_crianza_2020_desc": "Fino",
+  "venta_las_vacas_2021": "Venta las Vacas 2021",
+  "venta_las_vacas_2021_desc": "Fino",
+  "gran_caus_2017": "Gran Caus 2017",
+  "gran_caus_2017_desc": "Merlot, Cabernet Franc, Cabernet Sauvignon",
+  "marques_de_murrieta_reserva_2019": "Marques de Murrieta reserva 2019",
+  "marques_de_murrieta_reserva_2019_desc": "Tempranillo, Graciano, Mazuelo",
+
+  "els_nanos_2021": "Els Nanos 2021",
+  "els_nanos_2021_desc": "Trepat ecológico",
+  "do_conca_de_barbera": "D.O Conca de Barberà",
+
+  "fontallada_brut_nature_2020": "Fontallada Brut Nature 2020",
+  "fontallada_brut_nature_2020_desc": "Macabeo, Xarel.lo, Parellada",
+  "llopart_brut_nature_reserva_2019": "Llopart Brut Nature reserva 2019",
+  "llopart_brut_nature_reserva_2019_desc": "Macabeo, Xarel.lo, Parellada, Chardonnay",
+  "do_cava": "D.O Cava"
 }
