--- a/public/locales/ca/common.json
+++ b/public/locales/ca/common.json
@@ -2,38 +2,151 @@
   "home": "Inici",
   "book": "Reserva",
   "menu": "Menú",
-  "pageTitle": "Tremendo Sant Cugat",
+  "pageTitle": "Tremendo Bar Sant Cugat",
   "logoAlt": "Logo de Tremendo",
   "appetizers": "Aperitius",
   "dishes": "Plats",
   "hamburgers": "Hamburgueses",
   "desserts": "Postres",
+  "tapas": "Tapes i Platets",
+  "beers": "Cerveses",
+  "wines": "Vins",
+  "white_wines": "Vins Blancs",
+  "red_wines": "Vins Tintos",
+  "rose_wines": "Vins Rosats",
+  "sparkling_wines": "Vins Espumosos",
   "name": "Nom",
   "email": "Correu electrònic",
   "message": "Missatge",
-  "bookTable": "Reserva una Taula",
-  "checkOurMenu": "El nostre menú",
-  "selectDate": "Trieu la Data",
-  "selectTime": "Trieu l'Hora",
-  "selectPax": "Nombre de Comensals",
-  "selectDetails": "Detalls del Client",
+  "bookTable": "Reserva una taula",
+  "checkOurMenu": "Consulta el nostre menú",
+  "selectDate": "Selecciona la data",
+  "selectTime": "Selecciona l'hora",
+  "selectPax": "Nombre de comensals",
+  "selectDetails": "Detalls dels convidats",
   "selectDateTitle": "Data",
   "selectTimeTitle": "Hora",
   "selectPaxTitle": "Comensals",
   "selectDetailsTitle": "Detalls",
   "comments": "Comentaris",
-  "pleaseFillDate": "Si us plau, ompliu la data.",
-  "pleaseFillTime": "Si us plau, ompliu l'hora.",
-  "pleaseFillPax": "Si us plau, ompliu el nombre de comensals.",
-  "pleaseFillName": "Si us plau, introduïu un nom.",
-  "pleaseFillEmail": "Si us plau, introduïu un correu electrònic.",
+  "pleaseFillDate": "Si us plau, introdueix la data.",
+  "pleaseFillTime": "Si us plau, introdueix l'hora.",
+  "pleaseFillPax": "Si us plau, introdueix el nombre de comensals.",
+  "pleaseFillName": "Si us plau, introdueix un nom.",
+  "pleaseFillEmail": "Si us plau, introdueix un correu electrònic.",
   "back": "Enrere",
   "next": "Següent",
-  "submit": "Enviar",
-  "makeAnotherReservation": "Fer una altra reserva",
+  "submit": "Envia",
+  "makeAnotherReservation": "Fes una altra reserva",
   "reservationConfirmed": "Reserva confirmada",
   "footerCopyright": "Tremendo Sant Cugat",
-  "allRightsReserved": "Grupo Clorofila Barcelona",
+  "allRightsReserved": "Grup Clorofila Barcelona",
   "designedBy": "Dissenyat per",
-  "preferPhoneBooking": "Prefereixes reservar per telèfon?"
+  "preferPhoneBooking": "Prefereixes reservar per telèfon?",
+
+  "olives": "Olives",
+  "house_chips": "Patates de la casa",
+  "house_chips_desc": "Patates, olives, piparras i salsa d'aperitiu",
+  "combo_with_mussels": "Combo amb musclos",
+  "combo_with_mussels_desc": "Patates, olives, piparras, musclos i salsa d'aperitiu",
+  "combo_with_anchovies": "Combo amb anxoves",
+  "combo_with_anchovies_desc": "Patates, olives, piparras, anxoves i salsa d'aperitiu",
+  "anchovy_cantabrico": "Anxova del Cantàbric '00' (1 filet)",
+  "anchovies_in_vinegar": "Anxoves en vinagre (6u)",
+  "gilda": "Gilda",
+  "mussels_in_escabeche": "Musclos en escabetx",
+
+  "bravas": "Braves",
+  "russian_salad": "Amanida russa",
+  "eggplant_chips_with_truffled_honey": "Xips d'albergínia amb mel trufada",
+  "iberian_ham_croquettes": "Croquetes de pernil ibèric (1u)",
+  "clams_a_la_marinera": "Cloïsses a la marinera",
+  "cod_fritters_with_citrus_mayo": "Bunyols de bacallà amb maionesa de cítrics (1u)",
+  "iberian_ham_100_bellota": "Pernil ibèric 100% bellota, tallat a mà 80gr",
+  "bread_with_tomato": "Pa amb tomàquet",
+  "grilled_mussels": "Musclos a la brasa",
+  "fried_chicken_marinated": "Pollastre fregit (marinat 12h)",
+  "fresh_squid_from_market": "Calamars frescos de llotja (segons disponibilitat)",
+  "scallops_with_caramelized_onion": "Vieires amb ceba caramel·litzada a la planxa i gratinades (4u)",
+  "barcelona_style_dry_seafood_rice": "Arròs sec de marisc a l'estil barceloní (preu per persona, mínim 2 persones)",
+  "broken_eggs_with_iberian_ham": "Ous trencats amb pernil ibèric",
+  "broken_eggs_with_foie": "Ous trencats amb foie",
+  "veal_cheek_low_temp": "Galta de vedella a baixa temperatura amb parmentier i la seva reducció",
+  "tomato_purple_onion_tuna_salad": "Tomàquet Barbastro, ceba morada i ventresca de tonyina",
+  "andalusian_calamari": "Calamars a l'andalusa",
+  "grilled_octopus_with_kimchi": "Pop a la brasa amb pinzellada de kimchi (lleugerament picant), causa limeña i pico de gallo",
+  "marinated_salmon": "Salmó marinat, tomàquet Barbastro, alvocat, mozzarella i emulsió de soja i mel",
+  "yellowfin_tuna_tataki": "Tataki de tonyina vermella yellowfin a la brasa, salsa teriyaki, maionesa de wasabi, sèsam i brots",
+  "yellowfin_tuna_tartar": "Tàrtar de tonyina vermella yellowfin amb crema d'alvocat",
+  "minute_steak_tartar": "Steak tàrtar de filet a la minute",
+  "grilled_beef_tenderloin_with_foie": "Filet de vedella a la brasa amb foie i ceba caramel·litzada",
+  "grilled_beef_rib_steak": "Costella de vedella de la Cerdanya a la brasa (500gr per compartir)",
+
+  "cheesecake_with_fruit_jam": "Pastís de formatge amb confitura de fruites",
+  "chocolate_cake_with_cocoa": "Pastís de xocolata amb cobertura de cacau, sal en escates i caramel casolà",
+  "ultra_creamy_flan": "Flam ultracremós amb nata casolana",
+
+  "estrella_galicia_glass": "Copa Estrella Galicia",
+  "estrella_galicia_small": "Canya Estrella Galicia",
+  "estrella_galicia_mug": "Gerra Estrella Galicia",
+  "estrella_galicia": "Estrella Galicia",
+  "estrella_damm": "Estrella Damm",
+  "voll_damm": "Voll-Damm",
+  "estrella_galicia_non_alcoholic": "Estrella Galicia sense alcohol",
+  "estrella_galicia_gluten_free": "Estrella Galicia sense gluten",
+  "espiga": "Espiga",
+
+  "fenomenal_verdejo_2022": "Fenomenal 2022 (Verdejo)",
+  "fenomenal_verdejo_2022_desc": "Verdejo",
+  "do_rueda": "D.O Rueda",
+  "ca_nestruc_2021": "Ca Nestruc 2021",
+  "ca_nestruc_2021_desc": "Xarel.lo, Macabeo i Muscat",
+  "do_catalunya": "D.O Catalunya",
+  "terra_prima_2022": "Terra Prima 2022",
+  "terra_prima_2022_desc": "Xarel.lo, Macabeo i Moscatel de Fontignac",
+  "do_penedes": "D.O Penedès",
+  "el_perro_verde_2022": "El Perro Verde 2022",
+  "el_perro_verde_2022_desc": "Verdejo",
+  "perafita_2023": "Perafita 2023",
+  "perafita_2023_desc": "Picapoll",
+  "do_emporda": "D.O Empordà",
+  "gessami_2022": "Gessamí 2022",
+  "gessami_2022_desc": "Muscat de Frontignan, Sauvignon Blanc i Gewürztraminer",
+  "terras_gauda_2022": "Terras Gauda 2022",
+  "terras_gauda_2022_desc": "Albariño, Caiño Blanco, Loureiro",
+  "do_rias_baixas": "D.O Rias Baixas",
+  "can_sumoi_xarel_lo_2022": "Can Sumoi Xarel.lo 2022",
+  "can_sumoi_xarel_lo_2022_desc": "Xarel.lo",
+  "belondrade_quinta_apolonia_2022": "Belondrade Quinta Apolonia 2022",
+  "belondrade_quinta_apolonia_2022_desc": "Verdejo",
+
+  "heraclio_alfaro_crianza_2019": "Heraclio Alfaro criança 2019",
+  "heraclio_alfaro_crianza_2019_desc": "Tempranillo, Garnacha, Graciano",
+  "do_rioja": "D.O Rioja",
+  "mas_picosa_2021_eco": "Mas Picosa 2021 ECO",
+  "mas_picosa_2021_eco_desc": "Garnacha, Syrah, Merlot, Tempranillo",
+  "do_montsant": "D.O Montsant",
+  "petit_caus_2022_eco": "Petit Caus 2022 ECO",
+  "petit_caus_2022_eco_desc": "Merlot, Syrah, Cabernet Franc, Tempranillo",
+  "pago_de_los_capellanes_2022": "Pago de los Capellanes 2022",
+  "pago_de_los_capellanes_2022_desc": "Fino",
+  "do_ribera_del_duero": "D.O Ribera del Duero",
+  "vizcarra_crianza_2020": "Vizcarra criança 2020",
+  "vizcarra_crianza_2020_desc": "Fino",
+  "venta_las_vacas_2021": "Venta las Vacas 2021",
+  "venta_las_vacas_2021_desc": "Fino",
+  "gran_caus_2017": "Gran Caus 2017",
+  "gran_caus_2017_desc": "Merlot, Cabernet Franc, Cabernet Sauvignon",
+  "marques_de_murrieta_reserva_2019": "Marques de Murrieta reserva 2019",
+  "marques_de_murrieta_reserva_2019_desc": "Tempranillo, Graciano, Mazuelo",
+
+  "els_nanos_2021": "Els Nanos 2021",
+  "els_nanos_2021_desc": "Trepat ecològic",
+  "do_conca_de_barbera": "D.O Conca de Barberà",
+
+  "fontallada_brut_nature_2020": "Fontallada Brut Nature 2020",
+  "fontallada_brut_nature_2020_desc": "Macabeo, Xarel.lo, Parellada",
+  "llopart_brut_nature_reserva_2019": "Llopart Brut Nature reserva 2019",
+  "llopart_brut_nature_reserva_2019_desc": "Macabeo, Xarel.lo, Parellada, Chardonnay",
+  "do_cava": "D.O Cava"
 }
