--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -8,6 +8,13 @@
   "dishes": "Dishes",
   "hamburgers": "Hamburgers",
   "desserts": "Desserts",
+  "tapas": "Tapas and Small Plates",
+  "beers": "Beers",
+  "wines": "Wines",
+  "white_wines": "White Wines",
+  "red_wines": "Red Wines",
+  "rose_wines": "Rosé Wines",
+  "sparkling_wines": "Sparkling Wines",
   "name": "Name",
   "email": "Email",
   "message": "Message",
@@ -16,7 +23,7 @@
   "selectDate": "Select Date",
   "selectTime": "Select Time",
   "selectPax": "Number of Guests",
-  "selectDetails": "Guerst Details",
+  "selectDetails": "Guest Details",
   "selectDateTitle": "Date",
   "selectTimeTitle": "Time",
   "selectPaxTitle": "Guests",
@@ -35,6 +42,111 @@
   "footerCopyright": "Tremendo Sant Cugat",
   "allRightsReserved": "Grupo Clorofila Barcelona",
   "designedBy": "Designed by",
-  "preferPhoneBooking": "Prefer phone booking?"
-  
+  "preferPhoneBooking": "Prefer phone booking?",
+
+  "olives": "Olives",
+  "house_chips": "House chips",
+  "house_chips_desc": "Chips, olives, piparras, and appetizer sauce",
+  "combo_with_mussels": "Combo with mussels",
+  "combo_with_mussels_desc": "Chips, olives, piparras, mussels, and appetizer sauce",
+  "combo_with_anchovies": "Combo with anchovies",
+  "combo_with_anchovies_desc": "Chips, olives, piparras, anchovies, and appetizer sauce",
+  "anchovy_cantabrico": "Anchovy Cantábrico '00' (1 filet)",
+  "anchovies_in_vinegar": "Anchovies in vinegar (6u)",
+  "gilda": "Gilda",
+  "mussels_in_escabeche": "Mussels in escabeche",
+
+  "bravas": "Bravas",
+  "russian_salad": "Russian salad",
+  "eggplant_chips_with_truffled_honey": "Eggplant chips with truffled honey",
+  "iberian_ham_croquettes": "Iberian ham croquettes (1u)",
+  "clams_a_la_marinera": "Clams a la marinera",
+  "cod_fritters_with_citrus_mayo": "Cod fritters with citrus mayo (1u)",
+  "iberian_ham_100_bellota": "Iberian ham 100% bellota, hand cut 80gr",
+  "bread_with_tomato": "Bread with tomato",
+  "grilled_mussels": "Grilled mussels",
+  "fried_chicken_marinated": "Fried chicken (marinated 12h)",
+  "fresh_squid_from_market": "Fresh squid from the market (price depends on availability)",
+  "scallops_with_caramelized_onion": "Scallops with caramelized onion on the grill and gratin (4u)",
+  "barcelona_style_dry_seafood_rice": "Barcelona-style dry seafood rice (price per person, minimum 2 people)",
+  "broken_eggs_with_iberian_ham": "Broken eggs with Iberian ham",
+  "broken_eggs_with_foie": "Broken eggs with foie",
+  "veal_cheek_low_temp": "Veal cheek at low temperature with parmentier and its reduction",
+  "tomato_purple_onion_tuna_salad": "Tomato, purple onion, and tuna belly salad",
+  "andalusian_calamari": "Andalusian calamari",
+  "grilled_octopus_with_kimchi": "Grilled octopus with a touch of kimchi (slightly spicy), causa limeña and pico de gallo",
+  "marinated_salmon": "Marinated salmon, tomato Barbastro, avocado, mozzarella and soy and honey emulsion",
+  "yellowfin_tuna_tataki": "Grilled yellowfin red tuna tataki, teriyaki sauce, wasabi mayonnaise, sesame and sprouts",
+  "yellowfin_tuna_tartar": "Yellowfin red tuna tartar with avocado cream",
+  "minute_steak_tartar": "Minute steak tartar",
+  "grilled_beef_tenderloin_with_foie": "Grilled beef tenderloin with foie and caramelized onion",
+  "grilled_beef_rib_steak": "Grilled beef rib steak from Cerdanya (500gr to share)",
+
+  "cheesecake_with_fruit_jam": "Cheesecake with fruit jam",
+  "chocolate_cake_with_cocoa": "Chocolate cake with cocoa coating, flaked salt, and homemade caramel",
+  "ultra_creamy_flan": "Ultra creamy flan with homemade cream",
+
+  "estrella_galicia_glass": "Estrella Galicia glass",
+  "estrella_galicia_small": "Estrella Galicia small",
+  "estrella_galicia_mug": "Estrella Galicia mug",
+  "estrella_galicia": "Estrella Galicia",
+  "estrella_damm": "Estrella Damm",
+  "voll_damm": "Voll-Damm",
+  "estrella_galicia_non_alcoholic": "Estrella Galicia non-alcoholic",
+  "estrella_galicia_gluten_free": "Estrella Galicia gluten-free",
+  "espiga": "Espiga",
+
+  "fenomenal_verdejo_2022": "Fenomenal 2022 (Verdejo)",
+  "fenomenal_verdejo_2022_desc": "Verdejo",
+  "do_rueda": "D.O Rueda",
+  "ca_nestruc_2021": "Ca Nestruc 2021",
+  "ca_nestruc_2021_desc": "Xarel.lo, Macabeo, Muscat",
+  "do_catalunya": "D.O Catalunya",
+  "terra_prima_2022": "Terra Prima 2022",
+  "terra_prima_2022_desc": "Xarel.lo, Macabeo, Moscatel de Fontignac",
+  "do_penedes": "D.O Penedés",
+  "el_perro_verde_2022": "El Perro Verde 2022",
+  "el_perro_verde_2022_desc": "Verdejo",
+  "perafita_2023": "Perafita 2023",
+  "perafita_2023_desc": "Picapoll",
+  "do_emporda": "D.O Empordà",
+  "gessami_2022": "Gessamí 2022",
+  "gessami_2022_desc": "Muscat de Frontignan, Sauvignon Blanc, Gewürztraminer",
+  "terras_gauda_2022": "Terras Gauda 2022",
+  "terras_gauda_2022_desc": "Albariño, Caiño Blanco, Loureiro",
+  "do_rias_baixas": "D.O Rias Baixas",
+  "can_sumoi_xarel_lo_2022": "Can Sumoi Xarel.lo 2022",
+  "can_sumoi_xarel_lo_2022_desc": "Xarel.lo",
+  "belondrade_quinta_apolonia_2022": "Belondrade Quinta Apolonia 2022",
+  "belondrade_quinta_apolonia_2022_desc": "Verdejo",
+
+  "heraclio_alfaro_crianza_2019": "Heraclio Alfaro crianza 2019",
+  "heraclio_alfaro_crianza_2019_desc": "Tempranillo, Garnacha, Graciano",
+  "do_rioja": "D.O Rioja",
+  "mas_picosa_2021_eco": "Mas Picosa 2021 ECO",
+  "mas_picosa_2021_eco_desc": "Garnacha, Syrah, Merlot, Tempranillo",
+  "do_montsant": "D.O Montsant",
+  "petit_caus_2022_eco": "Petit Caus 2022 ECO",
+  "petit_caus_2022_eco_desc": "Merlot, Syrah, Cabernet Franc, Tempranillo",
+  "pago_de_los_capellanes_2022": "Pago de los Capellanes 2022",
+  "pago_de_los_capellanes_2022_desc": "Fino",
+  "do_ribera_del_duero": "D.O Ribera del Duero",
+  "vizcarra_crianza_2020": "Vizcarra crianza 2020",
+  "vizcarra_crianza_2020_desc": "Fino",
+  "venta_las_vacas_2021": "Venta las Vacas 2021",
+  "venta_las_vacas_2021_desc": "Fino",
+  "gran_caus_2017": "Gran Caus 2017",
+  "gran_caus_2017_desc": "Merlot, Cabernet Franc, Cabernet Sauvignon",
+  "marques_de_murrieta_reserva_2019": "Marques de Murrieta reserva 2019",
+  "marques_de_murrieta_reserva_2019_desc": "Tempranillo, Graciano, Mazuelo",
+
+  "els_nanos_2021": "Els Nanos 2021",
+  "els_nanos_2021_desc": "Trepat ecològic",
+  "do_conca_de_barbera": "D.O Conca de Barberà",
+
+  "fontallada_brut_nature_2020": "Fontallada Brut Nature 2020",
+  "fontallada_brut_nature_2020_desc": "Macabeo, Xarel.lo, Parellada",
+  "llopart_brut_nature_reserva_2019": "Llopart Brut Nature reserva 2019",
+  "llopart_brut_nature_reserva_2019_desc": "Macabeo, Xarel.lo, Parellada, Chardonnay",
+  "do_cava": "D.O Cava"
 }
