removes booking are

--- a/public/locales/ca/common.json
+++ b/public/locales/ca/common.json
@@ -42,7 +42,7 @@
   "footerCopyright": "Tremendo Sant Cugat",
   "allRightsReserved": "Grup Clorofila Barcelona",
   "designedBy": "Dissenyat per",
-  "preferPhoneBooking": "Prefereixes reservar per telèfon?",
+  "preferPhoneBooking": "Truca'ns per fer una reserva",
 
   "olives": "Olives",
   "house_chips": "Patates de la casa",
