--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -42,7 +42,7 @@
   "footerCopyright": "Tremendo Sant Cugat",
   "allRightsReserved": "Grupo Clorofila Barcelona",
   "designedBy": "Designed by",
-  "preferPhoneBooking": "Prefer phone booking?",
+  "preferPhoneBooking": "Give us a call for reservations",
 
   "olives": "Olives",
   "house_chips": "House chips",
