--- a/public/locales/es/common.json
+++ b/public/locales/es/common.json
@@ -42,7 +42,7 @@
   "footerCopyright": "Tremendo Sant Cugat",
   "allRightsReserved": "Grupo Clorofila Barcelona",
   "designedBy": "Diseñado por",
-  "preferPhoneBooking": "¿Prefieres reservar por teléfono?",
+  "preferPhoneBooking": "Llámanos para reservar",
 
   "olives": "Aceitunas",
   "house_chips": "Patatas de la casa",
