updates location links in common.json

--- a/public/locales/ca/common.json
+++ b/public/locales/ca/common.json
@@ -2,6 +2,7 @@
   "home": "Inici",
   "book": "Reserva",
   "menu": "Menú",
+  "location": "Ubicació",
   "pageTitle": "Tremendo Bar Sant Cugat",
   "logoAlt": "Logo de Tremendo",
   "appetizers": "Aperitius",
