--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -2,6 +2,7 @@
   "home": "Home",
   "book": "Book",
   "menu": "Menu",
+  "location": "Location",
   "pageTitle": "Tremendo Bar Sant Cugat",
   "logoAlt": "Tremendo Logo",
   "appetizers": "Appetizers",
