--- a/public/locales/es/common.json
+++ b/public/locales/es/common.json
@@ -2,6 +2,7 @@
   "home": "Inicio",
   "book": "Reservar",
   "menu": "Menú",
+  "location": "Ubicación",
   "pageTitle": "Tremendo Bar Sant Cugat",
   "logoAlt": "Logotipo de Tremendo",
   "appetizers": "Aperitivos",
