updates location styles and common.json for navigate

--- a/public/locales/ca/common.json
+++ b/public/locales/ca/common.json
@@ -3,6 +3,7 @@
   "book": "Reserva",
   "menu": "Menú",
   "location": "Ubicació",
+  "navigate": "Porta'm",
   "pageTitle": "Tremendo Bar Sant Cugat",
   "logoAlt": "Logo de Tremendo",
   "appetizers": "Aperitius",
