--- a/public/locales/es/common.json
+++ b/public/locales/es/common.json
@@ -3,6 +3,7 @@
   "book": "Reservar",
   "menu": "Menú",
   "location": "Ubicación",
+  "navigate": "Llévame",
   "pageTitle": "Tremendo Bar Sant Cugat",
   "logoAlt": "Logotipo de Tremendo",
   "appetizers": "Aperitivos",
