--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -3,6 +3,7 @@
   "book": "Book",
   "menu": "Menu",
   "location": "Location",
+  "navigate": "Take me there",
   "pageTitle": "Tremendo Bar Sant Cugat",
   "logoAlt": "Tremendo Logo",
   "appetizers": "Appetizers",
