adds update of bar to tremendo only

--- a/public/locales/ca/common.json
+++ b/public/locales/ca/common.json
@@ -4,7 +4,7 @@
   "menu": "Menú",
   "location": "Ubicació",
   "navigate": "Porta'm",
-  "pageTitle": "Tremendo Bar Sant Cugat",
+  "pageTitle": "tremendo Sant Cugat",
   "logoAlt": "Logo de Tremendo",
   "appetizers": "Aperitius",
   "dishes": "Plats",
