--- a/public/locales/es/common.json
+++ b/public/locales/es/common.json
@@ -4,7 +4,7 @@
   "menu": "Menú",
   "location": "Ubicación",
   "navigate": "Llévame",
-  "pageTitle": "Tremendo Bar Sant Cugat",
+  "pageTitle": "tremendo Sant Cugat",
   "logoAlt": "Logotipo de Tremendo",
   "appetizers": "Aperitivos",
   "dishes": "Platos",
