--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -4,7 +4,7 @@
   "menu": "Menu",
   "location": "Location",
   "navigate": "Take me there",
-  "pageTitle": "Tremendo Bar Sant Cugat",
+  "pageTitle": "tremendo Sant Cugat",
   "logoAlt": "Tremendo Logo",
   "appetizers": "Appetizers",
   "dishes": "Dishes",
