updates a few locales, button style and adss motion spalsh page

--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -21,7 +21,7 @@
   "email": "Email",
   "message": "Message",
   "bookTable": "Book A Table",
-  "checkOurMenu": "Check our menu",
+  "checkOurMenu": "Menu",
   "selectDate": "Select Date",
   "selectTime": "Select Time",
   "selectPax": "Number of Guests",
