--- a/public/locales/ca/common.json
+++ b/public/locales/ca/common.json
@@ -20,8 +20,8 @@
   "name": "Nom",
   "email": "Correu electrònic",
   "message": "Missatge",
-  "bookTable": "Reserva una taula",
-  "checkOurMenu": "Consulta el nostre menú",
+  "bookTable": "Reservar",
+  "checkOurMenu": "Menú",
   "selectDate": "Selecciona la data",
   "selectTime": "Selecciona l'hora",
   "selectPax": "Nombre de comensals",
