--- a/public/locales/es/common.json
+++ b/public/locales/es/common.json
@@ -20,8 +20,8 @@
   "name": "Nombre",
   "email": "Correo electrónico",
   "message": "Mensaje",
-  "bookTable": "Reservar una mesa",
-  "checkOurMenu": "Consulta nuestro menú",
+  "bookTable": "Reservar",
+  "checkOurMenu": "Menú",
   "selectDate": "Seleccionar fecha",
   "selectTime": "Seleccionar hora",
   "selectPax": "Número de comensales",
