updates Image Gallery Nav

--- a/public/locales/ca/common.json
+++ b/public/locales/ca/common.json
@@ -3,6 +3,7 @@
   "book": "Reserva",
   "menu": "Menú",
   "location": "Ubicació",
+  "gallery": "Galeria",
   "navigate": "Porta'm",
   "pageTitle": "tremendo Sant Cugat",
   "logoAlt": "Logo de Tremendo",
