--- a/public/locales/es/common.json
+++ b/public/locales/es/common.json
@@ -3,6 +3,7 @@
   "book": "Reservar",
   "menu": "Menú",
   "location": "Ubicación",
+  "gallery": "Galería",
   "navigate": "Llévame",
   "pageTitle": "tremendo Sant Cugat",
   "logoAlt": "Logotipo de Tremendo",
