creates lightbox gallery

--- a/public/locales/ca/common.json
+++ b/public/locales/ca/common.json
@@ -1,7 +1,7 @@
 {
   "home": "Inici",
   "book": "Reserva",
-  "menu": "Menú",
+  "menu": "La Nostra Carta",
   "location": "Ubicació",
   "gallery": "Galeria",
   "navigate": "Porta'm",
