updates mobile landing page

--- a/public/locales/ca/common.json
+++ b/public/locales/ca/common.json
@@ -1,7 +1,7 @@
 {
   "home": "Inici",
-  "book": "Reserva",
-  "menu": "La Nostra Carta",
+  "book": "Reservar",
+  "menu": "La Carta",
   "location": "Ubicació",
   "gallery": "Galeria",
   "navigate": "Porta'm",
