--- a/public/locales/es/common.json
+++ b/public/locales/es/common.json
@@ -1,7 +1,7 @@
 {
   "home": "Inicio",
   "book": "Reservar",
-  "menu": "Nuestra Carta",
+  "menu": "La Carta",
   "location": "Ubicación",
   "gallery": "Galería",
   "navigate": "Llévame",
