adds user friendly scroll and updates location map

--- a/public/locales/ca/common.json
+++ b/public/locales/ca/common.json
@@ -5,6 +5,7 @@
   "location": "Ubicació",
   "gallery": "Galeria",
   "navigate": "Porta'm",
+  "openMaps": "Obre Google Maps",
   "pageTitle": "tremendo Sant Cugat",
   "logoAlt": "Logo de Tremendo",
   "appetizers": "Aperitius",
