--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -5,6 +5,7 @@
   "location": "Location",
   "gallery": "Gallery",
   "navigate": "Take me there",
+  "openMaps": "Open Google Maps",
   "pageTitle": "tremendo Sant Cugat",
   "logoAlt": "Tremendo Logo",
   "appetizers": "Appetizers",
