--- a/public/locales/es/common.json
+++ b/public/locales/es/common.json
@@ -5,6 +5,7 @@
   "location": "Ubicación",
   "gallery": "Galería",
   "navigate": "Llévame",
+  "openMaps": "Abrir Google Maps",
   "pageTitle": "tremendo Sant Cugat",
   "logoAlt": "Logotipo de Tremendo",
   "appetizers": "Aperitivos",
