updates landing links and coivers map

--- a/public/locales/ca/common.json
+++ b/public/locales/ca/common.json
@@ -4,6 +4,7 @@
   "menu": "La Carta",
   "location": "Ubicació",
   "gallery": "Galeria",
+  "gallery2": "Descobreix els nostres plats",
   "navigate": "Porta'm",
   "openMaps": "Obre Google Maps",
   "pageTitle": "tremendo Sant Cugat",
