--- a/public/locales/es/common.json
+++ b/public/locales/es/common.json
@@ -4,6 +4,7 @@
   "menu": "La Carta",
   "location": "Ubicación",
   "gallery": "Galería",
+  "gallery2": "Descubre nuestros platos",
   "navigate": "Llévame",
   "openMaps": "Abrir Google Maps",
   "pageTitle": "tremendo Sant Cugat",
