fixes margins in ctas

--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -4,7 +4,7 @@
   "menu": "Menu",
   "location": "Location",
   "gallery": "Gallery",
-  "gallery2": "Discover our top dishes",
+  "gallery2": "⭐ Discover our top dishes",
   "navigate": "Take me there",
   "openMaps": "Open Google Maps",
   "pageTitle": "tremendo Sant Cugat",
