updates favicon and adds bannerMessage to Landing

--- a/public/locales/ca/common.json
+++ b/public/locales/ca/common.json
@@ -4,7 +4,8 @@
   "menu": "La Carta",
   "location": "Ubicació",
   "gallery": "Galeria",
-  "gallery2": "⭐ Descobreix els nostres plats",
+  "gallery2": "Descobreix els nostres plats",
+  "bannerMessage": "Vine a gaudir de la millor comida a Sant Cugat! Oberts cada dia de 19:00 a 00:00.",
   "navigate": "Porta'm",
   "openMaps": "Obre Google Maps",
   "pageTitle": "tremendo Sant Cugat",
