--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -4,7 +4,8 @@
   "menu": "Menu",
   "location": "Location",
   "gallery": "Gallery",
-  "gallery2": "⭐ Discover our top dishes",
+  "gallery2": "Discover our top dishes",
+  "bannerMessage": "Come enjoy the best food in Sant Cugat! Open every day from 19:00 to 00:00.",
   "navigate": "Take me there",
   "openMaps": "Open Google Maps",
   "pageTitle": "tremendo Sant Cugat",
