--- a/public/locales/es/common.json
+++ b/public/locales/es/common.json
@@ -4,7 +4,8 @@
   "menu": "La Carta",
   "location": "Ubicación",
   "gallery": "Galería",
-  "gallery2": "⭐ Descubre nuestros platos",
+  "gallery2": "Descubre nuestros platos",
+  "bannerMessage": "¡Ven a disfrutar de la mejor comida en Sant Cugat! Abiertos cada dîa de 19:00 a 00:00.",
   "navigate": "Llévame",
   "openMaps": "Abrir Google Maps",
   "pageTitle": "tremendo Sant Cugat",
