--- a/public/locales/ca/common.json
+++ b/public/locales/ca/common.json
@@ -5,7 +5,7 @@
   "location": "Ubicació",
   "gallery": "Galeria",
   "gallery2": "Descobreix els nostres plats",
-  "bannerMessage": "Vine a gaudir del millor menjar a Sant Cugat! Oberts cada dia de 19:00 a 00:00.",
+  "bannerMessage": "Vine a gaudir del millor menjar a Sant Cugat! Oberts: de 19:00 a 00:00 i caps de setmana de 12:30 a 00:00.",
   "navigate": "Porta'm",
   "openMaps": "Obre Google Maps",
   "pageTitle": "tremendo Sant Cugat",
