--- a/public/locales/ca/common.json
+++ b/public/locales/ca/common.json
@@ -80,7 +80,8 @@
   "veal_cheek_low_temp": "Galta de vedella a baixa temperatura amb parmentier i la seva reducció",
   "tomato_purple_onion_tuna_salad": "Tomàquet Barbastro, ceba morada i ventresca de tonyina",
   "andalusian_calamari": "Calamars a l'andalusa",
-  "grilled_octopus_with_kimchi": "Pop a la brasa amb pinzellada de kimchi (lleugerament picant), causa limeña i pico de gallo",
+  "grilled_octopus_with_kimchi": "Pop a la brasa amb pinzellada de kimchi",
+  "grilled_octopus_with_kimchi_desc": "(lleugerament picant), causa limeña i pico de gallo",
   "marinated_salmon": "Salmó marinat, tomàquet Barbastro, alvocat, mozzarella i emulsió de soja i mel",
   "yellowfin_tuna_tataki": "Tataki de tonyina vermella yellowfin a la brasa, salsa teriyaki, maionesa de wasabi, sèsam i brots",
   "yellowfin_tuna_tartar": "Tàrtar de tonyina vermella yellowfin amb crema d'alvocat",
@@ -91,6 +92,29 @@
   "cheesecake_with_fruit_jam": "Pastís de formatge amb confitura de fruites",
   "chocolate_cake_with_cocoa": "Pastís de xocolata amb cobertura de cacau, sal en escates i caramel casolà",
   "ultra_creamy_flan": "Flam ultracremós amb nata casolana",
+
+
+
+  "olives_stuffed_with_anchovy": "Olives farcides d'anxova",
+  "meatballs_with_cuttlefish": "Mandonguilles",
+  "cod_fritters_with_honey_aioli": "Bunyols de bacallà",
+  "artichoke_chips_with_romesco": "Xips de carxofa",
+  "sobrasada_mahon_cheese_omelet": "Truita de sobrassada i formatge",
+  "potato_omelet_with_caramelized_onion": "Truita de patates",
+  "burrata_figs_red_pesto": "Burrata",
+  "death_trumpet_mushrooms_sweet_potato": "Trompetes de la mort",
+  "three_tomato_tuna_salad": "Amanida de tres tomàquets",
+  "marinated_salmon_dish": "Salmó marinat",
+  "barcelona_style_seafood_rice": "Arròs sec de marisc",
+  "cerdanya_beef_rib_steak": "Costelló de vedella de la Cerdanya",
+  "aged_girona_beef_rib_steak": "Costelló de vedella de Girona",
+  "vanilla_chocolate_ice_cream": "Gelat de vainilla i xocolata",
+
+  "marinated_salmon_dish_desc": "amb tomàquet de Barbastre, alvocat, mozzarella, emulsió de soja i mel",
+  "barcelona_style_seafood_rice_desc": "(preu per persona - mínim 2 persones)",
+  "cerdanya_beef_rib_steak_desc": "(500g per compartir)",
+  "aged_girona_beef_rib_steak_desc": "(1kg per a 4 persones)",
+  "three_tomato_tuna_salad_desc": "amb ventresca de tonyina",
 
   "estrella_galicia_glass": "Copa Estrella Galicia",
   "estrella_galicia_small": "Canya Estrella Galicia",
